--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       <div class="text-2xl font-bold font-serif text-green-700">Magical Landscaping</div>
       <nav class="hidden md:flex gap-8 text-sm items-center">
         <a href="index.html" class="text-green-700 font-medium">Home</a>
-        <a href="services.html" class="hover:text-green-700">Services</a>
-        <a href="gallery.html" class="hover:text-green-700">Gallery</a>
-        <a href="about.html" class="hover:text-green-700">About Us</a>
+        <a href="html/services.html" class="hover:text-green-700">Services</a>
+        <a href="html/gallery.html" class="hover:text-green-700">Gallery</a>
+        <a href="html/about.html" class="hover:text-green-700">About Us</a>
         <div class="relative group">
           <button class="flex items-center hover:text-green-700">
             Contact Us
@@ -51,7 +51,7 @@
       </div>
       <div class="md:w-1/2 mt-12 md:mt-0 flex justify-center">
         <div class="w-full h-80 bg-gradient-to-r from-green-100 to-green-200 rounded-lg flex items-center justify-center">
-          <img src="../images/magical_landscaping.jpg" alt="Beautiful landscape" class="w-full h-full object-cover rounded-lg">
+          <img src="images/magical_landscaping.jpg" alt="Beautiful landscape" class="w-full h-full object-cover rounded-lg">
         </div>
       </div>
     </section>
@@ -103,7 +103,7 @@
               Our team collaborates closely with you to create personalized landscaping solutions.
             </p>
             <div class="w-full h-48 bg-green-100 rounded-lg mb-4">
-                <img src="../images/magical_landscaping.jpg" alt="Beautiful landscape" class="w-full h-full object-cover rounded-lg">
+                <img src="images/magical_landscaping.jpg" alt="Beautiful landscape" class="w-full h-full object-cover rounded-lg">
             </div>
             
           </div>
@@ -114,7 +114,7 @@
               We prioritize eco-friendly methods and materials in every project.
             </p>
             <div class="w-full h-48 bg-green-100 rounded-lg mb-4">
-                <img src="../images/1.jpg" alt="Beautiful landscape" class="w-full h-full object-cover rounded-lg">
+                <img src="images/1.jpg" alt="Beautiful landscape" class="w-full h-full object-cover rounded-lg">
             </div>
             <div class="flex gap-4">
               <button class="bg-green-700 hover:bg-green-800 text-white px-4 py-2 rounded text-sm transition duration-300">Learn More</button>
@@ -128,7 +128,7 @@
               Our portfolio showcases numerous successful transformations.
             </p>
             <div class="w-full h-48 bg-green-100 rounded-lg mb-4">
-                <img src="../images/2.jpg" alt="Beautiful landscape" class="w-full h-full object-cover rounded-lg">
+                <img src="images/2.jpg" alt="Beautiful landscape" class="w-full h-full object-cover rounded-lg">
             </div>
           </div>
         </div>
