fixed more linking

--- a/html/services.html
+++ b/html/services.html
@@ -13,7 +13,7 @@
     <header class="flex justify-between items-center px-8 py-6 bg-gray-100 shadow-sm sticky top-0 z-50">
       <div class="text-2xl font-bold font-serif text-green-700">Magical Landscaping</div>
       <nav class="hidden md:flex gap-8 text-sm items-center">
-        <a href="index.html" class="hover:text-green-700">Home</a>
+        <a href="../index.html" class="hover:text-green-700">Home</a>
         <a href="services.html" class="text-green-700 font-medium">Services</a>
         <a href="gallery.html" class="hover:text-green-700">Gallery</a>
         <a href="about.html" class="hover:text-green-700">About Us</a>
